@@ -17,6 +17,7 @@ EBUILD python-2.7.18-r102.ebuild 12549 BLAKE2B b5e748f3baf913c22eec6c9e0d88757ba
 EBUILD python-3.7.7-r2.ebuild 9982 BLAKE2B 7e8f9bdb4c11d673b9d626a66dc3babece5470f2df471cfb299ce54f5af35f441ed38c51c6a11c3746e3d751170198e5be9c17cb442a0c5d17dc14935e888cbf SHA512 fbff584b2e278cbcb87819d08c6e7f4175b1c83ae28cf79cddb70a9efc996a25303c76ee95ce927e8e392ee7e02c207a2709f0e5f5b46dfd015a5337f8084d3e
 EBUILD python-3.7.8-r2.ebuild 9902 BLAKE2B b9628bfacda6887dfbbf49f8ade319e6e75421e9b2ae3d0f0163670889eedf7d4b566ce3602566e906a2f23b4f50f060953d63004f4466306d0f79a86d64e51c SHA512 fc8c6ca42c0cd78d86799bb19627e31fd2ef1e31bce157e529e04f2e916e5db9bb47e9d87962215a866d3b24ec103600fda993681180f3117b0e36b7688293b5
 EBUILD python-3.7.9-r1.ebuild 9992 BLAKE2B bb4b26f9ec770d64dfa600267ef3ead9dc874dda49b56a9540ef5f4a152991c2bc73297fc93fe6527b0eda488937c994997cb27d4b17f86378d47cf522a55f76 SHA512 e3bf81e589764b79d8adcf26f0ba02395bb329cbd7422ba043303d376daf4796d60935cfc1471419f6022862a020c2ec103406c3f7935e2e495f4f5839ff9519
+EBUILD python-3.7.9-r2.ebuild 10672 BLAKE2B d274107aceda54d09cf8e698c22cf67c275b462beff62c0f6b3f540d9f6c80fa07a3c1a617452bc458193e43bb1114066e295ff78e39d415f4c40d08f699af78 SHA512 ca501e325ea15ccb96a026c9229dd81f2326643f98378b64bf0276516aa33c587cc7b0fa21361636e7c427dd093fb8df6c967a6ff6150bbb423ca99c6aa0f887
 EBUILD python-3.7.9.ebuild 9905 BLAKE2B 35fdaeb7d63e83b5dc64db14f8588aa86dfbddd52a5d855f7996b4c31e51cf0ab17c81809f1d69b1e4ef65c318826fb27f2ac7596c319d4c2b9061973250df44 SHA512 1d58fa66bb3ab5eddb1fc740a2344d4dbca0d19ea1dccef14087110c54aaf06d8d1eaf0a6b96271a0bf8f2472afa01f47650acc1f299fee6c4aad5820b8aa723
-MISC ChangeLog 1182 BLAKE2B af8654e52efd3688ffd50b0243c86e8ad901fd637e4fb530036a67a095a7e304f2136a14a31b87d13b5bf3b1d6d6b7a66bcaa442b556214b345918ae02af4dbc SHA512 22bd7702901e2c76c50a805cb7afa25a9e961829cc7f83fd3df517191f1a3af374ffaf71f8e9a924e3b8e8176aeab2990abd43c1723ef0debd285607c469cb05
+MISC ChangeLog 1281 BLAKE2B 436137d8b21149bddb91161768c856450a993f4c04c7719d699d5bd9511039df57568b4ce7b3c53b64ed444078cca3cf7f2294342bad55c9c4dac09cad2bee80 SHA512 e489051ad1cd4abb16a5daa8130e71e24421d1f7985540f6058dbc2376084a828cb273eb6736c9e10379b497948a3641b84b1b20ca3f1ec67881544cf1913d26
 MISC metadata.xml 819 BLAKE2B 120c7c65d77488e726c5a0f4aa19469867ea6900e747169fae2f9cf8f14ec2936089d5edfe1935ce610bec26387273e261b1cc4b023680c8c4b229f2141a7223 SHA512 08f45707e5490067a21951b9d37c8ae67064ab67cccc5b8d8c204eab8d4a004fb910627b62989c67b849b89d301618f8f8f7996e99e1ef5bab38a239c49c124d
